feat: inteligencia en usuarios y en collabs